--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <script src="javascript/Clouds.js"></script>
     <script src="javascript/Bullet.js"></script>
     <script src="javascript/Enemy.js"></script>
     <script src="javascript/Player.js"></script>
