--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="root"></div>
     <script src="javascript/Clouds.js"></script>
     <script src="javascript/Bullet.js"></script>
+    <script src="javascript/Bombs.js"></script>
     <script src="javascript/Enemy.js"></script>
     <script src="javascript/Player.js"></script>
     <script src="javascript/Game.js"></script>
